{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 109,
  "lineage": "e9bead95-af87-6312-5bf3-f639017d0f24",
  "resources": [
    {
      "module": "module.asia_southeast1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "abigail_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "abigail-data-disk",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/zones/asia-southeast1-b/disks/abigail-data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230630",
                    "size": 25,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/zones/asia-southeast1-b/disks/abigail-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terrafor-mars/zones/asia-southeast1-b/instances/abigail-instance",
            "instance_id": "52914232135701956",
            "label_fingerprint": "HkMVJPKKYOQ=",
            "labels": {
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "kajonsak:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDB8vZGMrWERqCN8dXiSSJ4VLCOmlycMJyjCUHn2mWXJKJD2YmtAwTUWMfww+WhqgZbvhewVcrdiMsSApAGm1vWjc0XTEkwh3EKU5DhkhRusXw1MWv+30gqNGF1Kd+tGCoOJDUjozV5bXmMWzGhDPRe1aW7bRfKT6mRFlELnlXplvu5owKm2U/fxPxmEIL1ob0PjtbNceDOOB9Qlu8i4wUAxuafiC8P15kAOk7iyKDk9TngwjpDRVV5FSMV4BMOuYO+TSVR28AgDIW+373YrIuukf5VFeBYKLBOxP8LjaxaTFGGx0RBLvPptk54QB/6hmCwnQuNhzhbghMt8K2uOHEh1te6JF21+rLq2uMt6e3O9a5TRUwc37hrEwvvXFp79EZ0/NPLUc1zqKj+b9Tp/RAOZjG+6aNzUZcEtM2XRe16 [...]
            },
            "metadata_fingerprint": "1lSj5B1y8l0=",
            "name": "abigail-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.126.151.64",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/regions/asia-southeast1/subnetworks/asia-southeast1",
                "subnetwork_project": "terrafor-mars"
              }
            ],
            "project": "terrafor-mars",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/zones/asia-southeast1-b/instances/abigail-instance",
            "service_account": [
              {
                "email": "abigail-instance@terrafor-mars.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-cloudflare",
              "https-cloudflare"
            ],
            "tags_fingerprint": "IV3XTHRw08s=",
            "zone": "asia-southeast1-b"
          },
          "dependencies": [
            "module.asia_southeast1.google_compute_disk.abigail_data_disk",
            "module.asia_southeast1.google_compute_subnetwork.asia_southeast1",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asia_southeast1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "asia_southeast1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T20:10:02.540-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/terrafor-mars/regions/asia-southeast1/subnetworks/asia-southeast1",
            "ip_cidr_range": "10.10.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terrafor-mars",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/regions/asia-southeast1/subnetworks/asia-southeast1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us_east1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "haley_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230630",
                    "size": 25,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/zones/us-east1-b/disks/haley-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terrafor-mars/zones/us-east1-b/instances/haley-instance",
            "instance_id": "2555004257132795384",
            "label_fingerprint": "HkMVJPKKYOQ=",
            "labels": {
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "true",
              "ssh-keys": "kajonsak:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDB8vZGMrWERqCN8dXiSSJ4VLCOmlycMJyjCUHn2mWXJKJD2YmtAwTUWMfww+WhqgZbvhewVcrdiMsSApAGm1vWjc0XTEkwh3EKU5DhkhRusXw1MWv+30gqNGF1Kd+tGCoOJDUjozV5bXmMWzGhDPRe1aW7bRfKT6mRFlELnlXplvu5owKm2U/fxPxmEIL1ob0PjtbNceDOOB9Qlu8i4wUAxuafiC8P15kAOk7iyKDk9TngwjpDRVV5FSMV4BMOuYO+TSVR28AgDIW+373YrIuukf5VFeBYKLBOxP8LjaxaTFGGx0RBLvPptk54QB/6hmCwnQuNhzhbghMt8K2uOHEh1te6JF21+rLq2uMt6e3O9a5TRUwc37hrEwvvXFp79EZ0/NPLUc1zqKj+b9Tp/RAOZjG+6aNzUZcEtM2XRe16 [...]
            },
            "metadata_fingerprint": "1lSj5B1y8l0=",
            "name": "haley-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
                "network_ip": "10.20.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/regions/us-east1/subnetworks/us-east1",
                "subnetwork_project": "terrafor-mars"
              }
            ],
            "project": "terrafor-mars",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/zones/us-east1-b/instances/haley-instance",
            "service_account": [
              {
                "email": "haley-instance@terrafor-mars.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.us_east1.google_compute_subnetwork.us_east1",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us_east1",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router_us_east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T20:10:01.729-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terrafor-mars/regions/us-east1/routers/nat-router-us-east1",
            "name": "nat-router-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "project": "terrafor-mars",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/regions/us-east1/routers/nat-router-us-east1"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us_east1",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway_us-east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "terrafor-mars/us-east1/nat-router-us-east1/nat-gateway-us-east1",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway-us-east1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terrafor-mars",
            "region": "us-east1",
            "router": "nat-router-us-east1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.us_east1.google_compute_router.nat_router_us_east1",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us_east1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us_east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T20:10:00.719-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/terrafor-mars/regions/us-east1/subnetworks/us-east1",
            "ip_cidr_range": "10.20.0.0/20",
            "name": "us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terrafor-mars",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/regions/us-east1/subnetworks/us-east1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-07-12T20:10:00.673-07:00",
            "deny": [],
            "description": "Allows ICMP connections from any source to any instance on the network.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terrafor-mars/global/firewalls/allow-all-icmp",
            "log_config": [],
            "name": "allow-all-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "priority": 65534,
            "project": "terrafor-mars",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/firewalls/allow-all-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_vpc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-07-12T20:10:00.772-07:00",
            "deny": [],
            "description": "Allows connection from any source to any instance on the network using custom protocols.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terrafor-mars/global/firewalls/allow-all-vpc-private",
            "log_config": [],
            "name": "allow-all-vpc-private",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "priority": 65534,
            "project": "terrafor-mars",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/firewalls/allow-all-vpc-private",
            "source_ranges": [
              "10.10.0.0/20",
              "10.20.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_cloudflare",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-12T20:10:00.681-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terrafor-mars/global/firewalls/allow-http-cloudflare",
            "log_config": [],
            "name": "allow-http-cloudflare",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "priority": 1000,
            "project": "terrafor-mars",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/firewalls/allow-http-cloudflare",
            "source_ranges": [
              "103.21.244.0/22",
              "103.22.200.0/22",
              "103.31.4.0/22",
              "104.16.0.0/13",
              "104.24.0.0/14",
              "108.162.192.0/18",
              "131.0.72.0/22",
              "141.101.64.0/18",
              "162.158.0.0/15",
              "172.64.0.0/13",
              "173.245.48.0/20",
              "188.114.96.0/20",
              "190.93.240.0/20",
              "197.234.240.0/22",
              "198.41.128.0/17"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-cloudflare"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https_cloudflare",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-12T20:10:00.698-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terrafor-mars/global/firewalls/allow-https-cloudflare",
            "log_config": [],
            "name": "allow-https-cloudflare",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "priority": 1000,
            "project": "terrafor-mars",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/firewalls/allow-https-cloudflare",
            "source_ranges": [
              "103.21.244.0/22",
              "103.22.200.0/22",
              "103.31.4.0/22",
              "104.16.0.0/13",
              "104.24.0.0/14",
              "108.162.192.0/18",
              "131.0.72.0/22",
              "141.101.64.0/18",
              "162.158.0.0/15",
              "172.64.0.0/13",
              "173.245.48.0/20",
              "188.114.96.0/20",
              "190.93.240.0/20",
              "197.234.240.0/22",
              "198.41.128.0/17"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-cloudflare"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_from_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-12T20:10:00.777-07:00",
            "deny": [],
            "description": "ssh allow IAP-Tunnel",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terrafor-mars/global/firewalls/allow-ssh-from-iap",
            "log_config": [],
            "name": "allow-ssh-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "priority": 1000,
            "project": "terrafor-mars",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/firewalls/allow-ssh-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc",
            "mtu": 1460,
            "name": "terrafor-mars-prod-vpc",
            "project": "terrafor-mars",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrafor-mars/global/networks/terrafor-mars-prod-vpc"
          }
        }
      ]
    }
  ]
}